--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     </head>
     <p class="backdrop"></p>
     <div class="details-container">
+        
         <div class="image-container">
-            <img src="background.jpg" alt="">
+            <a href="background.jpg">
+                <img src="background.jpg" alt="">
+            </a>
         </div>
         <div class="company-profile">
             <p>Click <a href="profile.pdf">Here</a> to view company's Profile</p>
