--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <head>
-
-        <h1>Success Practitioners</h1>
-    </head>
-    <p class="backdrop"></p>
-    <div class="details-container">
-        <div class="image-container">
-            <img src="background.jpg" alt="">
+    <header>
+        <div class="logo">
+            <img src="sp logo black.jpg low resolution.jpg" alt="">
         </div>
-        <div class="company-profile">
-            <p>Click <a href="profile.pdf">Here</a> to view company's Profile</p>
-        </div>
+    </header>
+ <div class="flex-container">
+    <div class="item-1">
+        <img src="background.jpg" alt="">
     </div>
+    <div class="item-2">
+        Click <a href="profile.pdf">Here</a> to view our company's profile
+    </div>
+ </div>
 </body>
 </html>
