--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="background.jpg" alt="">
     </div>
     <div class="item-2">
-        Click <a href="profile.pdf">Here</a> to view our company's profile
+        Click <a href="profile.pdf">Here</a> to view our company profile
     </div>
  </div>
 </body>
