added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>success practitioner</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -14,10 +17,39 @@
     </header>
  <div class="flex-container">
     <div class="item-1">
-        <img src="background.jpg" alt="">
+        <h1>Dear Balanced Scorecard Delegate,</h1>
+        <h2>The captioned matter refers</h2>
+        <p>
+            I write to extend an invitation to you and your organization to the upcoming Balanced Scorecard Practical Master Class. This will be held from Tuesday the 15th to Friday the 18th of August 2023 at the Intercontinental Hotel in Lusaka. This course is designed for Executives and all those in supervisory positions at any level of the Strategy and Performance Management strata irrespective of Sector, as well as all Human Resources Management Practitioners. 
+        </p>
+        <p>
+            Many organizations spend a fortune in the process of developing strategic plans as well as investing in very robust Performance Management Systems. However, research has shown that only 5% manage to successfully execute their strategic plans. This is where the Balanced Scorecard framework comes in. It has proved, especially in the past 20 years, to be the best discovery of the last 3 decades in terms of a framework for linking the day-to-day operations and the performance management system to the overall objectives of the organization and consequently proving to be the leading Strategy Implementation Framework.
+
+        </p>
+        <p>
+            My team at Success Practitioners is excited to have the opportunity to train you and your team through this important framework for both your team and your own personal and professional endeavors. As the lead trainer, I am privileged to have used the framework and hence the term Practical Balanced Scorecard Master Class; because the course will mainly tilt to how to implement the Balanced Scorecard and sustain its success in the organization. This framework works for every sector and my team will gladly show you how to customize it and sustain its success. I am further triple certified by the California State University, The University of Zambia and the Balanced Scorecard Institute as a Balanced Scorecard Trainer and have been training several organizations from different sectors, for the past 7 years.  I am also a full member of the Zambia Institute of Human Resource Management and both a member and accredited Trainer for the Institute of Directors of Zambia and thus have a very healthy perspective of matters across the industry in this context.
+
+        </p>
+        <p>
+            The standard rate for training, materials, certificate of attendance and refreshments (minus transport and accommodation) is K12,500.00 (Zambian Kwacha) per participant net of all taxes. However, since you were a delegate at the Zambia Institute of Human Resources Management Regional Summit held in Livingstone, Zambia, we will still provide the discounted rate of K9,950.00 for both you and any other participants from your organization. You will recall that during my presentation on why most HR practitioners, rarely become CEOs, I did make this offer for our June Cohort of the Balanced Scorecard Class was full within a few hours of announcing it in Livingstone. Due to the overwhelming response, we decided to host another one to cater for many who were left out in the last one and to invite many others like you in the August session but at the same rate. We only require you to confirm registration by payment by 10th August 2023. The number of participants you can bring is uncapped.
+
+        </p>
+        <p>
+            Please see attached hereto a copy of the course outline and our company profile for more of our services. And please contact me and my team by call or WhatsApp on <span>+2600954731375</span> / <span>+260979884392</span> / <span>+260969990000</span> / <span>+260764818181</span> for registration or any other details or simply reply to this mail on <span>choolwe@successp.org</span>  and I will be glad attend to you. You may also make payment and send us the names of your participants by the communicated date of 10th August 2023 through the following bank details:
+        </p>
+        <pre>
+            ACCOUNT NAME: SUCCESS PRACTITIONERS
+            ACCOUNT NUMBER: <span>5781826500364</span>
+            ACCOUNT NAME: ZANACO
+            BRANCH: Northmead
+        </pre>
+    </div>
+    <div>
+        <img src="bsc social media.jpg" alt="">
     </div>
     <div class="item-2">
-        Click <a href="profile.pdf">Here</a> to view our company's profile
+       <button><a href="What you will learn-compressed.pdf">Click here to view what you will learn</a></button>
+       <button><a href="profile.pdf">Click here to view our company profile</a></button>
     </div>
  </div>
 </body>
