--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <pre>
             ACCOUNT NAME: SUCCESS PRACTITIONERS
             ACCOUNT NUMBER: <span>5781826500364</span>
-            ACCOUNT NAME: ZANACO
+            BANK: ZANACO
             BRANCH: Northmead
         </pre>
     </div>
